--- a/transactions-service/pom.xml
+++ b/transactions-service/pom.xml
@@ -82,6 +82,11 @@
 			<artifactId>liquibase-core</artifactId>
 			<version>5.0.1</version>
 		</dependency>
+		<dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.18.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
